--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,8 @@
   <meta name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no'>
   <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Quicksand|Shadows+Into+Light" rel="stylesheet">
   <meta name="theme-color" content="#A32328">
-  <title>Sopraval</title>
+  <!-- <title>Sopraval</title> -->
+  <title>prueba</title>
   <link rel="stylesheet" href="./css/index.build.css">
 </head>
 <body>
