feat: animaciones, analityc, lista

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,11 @@
   <!--[if lt IE 8]>
     <p class="browsehappy">Estás usando un navegador <strong>desactualizado</strong>.Por favor <a href="http://browsehappy.com/">actualiza tu navegador</a>Para mejorar la experien
   <![endif]-->
+  <div class="loading">
+    <picture>
+      <img src="./img/logo-sopraval.png" alt="logo sopraval">
+    </picture>
+  </div>
   <app></app>
   <script src="./js/vendors.min.js"></script>
   <script src="./js/index.build.js"></script>
